==> robot-doc/edfu_softrf_v2/lib/platform/STM32.cpp <==
#include <SPI.h>
#include <Wire.h>
#include <IWatchdog.h>
#include "../system/SoC.h"
#include "../driver/RF.h"
#include "../driver/LED.h"
#include "../driver/Sound.h"
#include "../driver/EEPROM.h"
#include "../driver/Battery.h"
#include "../driver/OLED.h"
#include "../driver/Baro.h"
#include "../protocol/data/NMEA.h"
#include "../protocol/data/GDL90.h"
#include "../protocol/data/D1090.h"
#include <STM32LowPower.h>
#include <ICM_20948.h>
#define IMU_UPDATE_INTERVAL 500 /* ms */

static void STM32_post_init()
{
#if defined(ARDUINO_NUCLEO_L073RZ)
  if (hw_info.model == SOFTRF_MODEL_DONGLE ||
      hw_info.model == SOFTRF_MODEL_BRACELET ) {
    Serial.println();
    Serial.print(F("TTGO "));
    Serial.print(hw_info.model == SOFTRF_MODEL_BRACELET   ? F("T-Impulse") : F("T-Motion"));
    Serial.print(F(" (S7"));
    Serial.print(STM32_has_TCXO ? '6' : '8');
    Serial.println(F("G) Power-on Self Test"));
    Serial.println();
    Serial.flush();

    Serial.println(F("Built-in components:"));

    Serial.print(F("RADIO   : "));
    Serial.println(hw_info.rf      == RF_IC_SX1276        ? F("PASS") : F("FAIL"));
    if (hw_info.rf == RF_IC_SX1276) {
      Serial.print(F("CLK SRC : "));
      Serial.println(STM32_has_TCXO                       ? F("TCXO") : F("XTAL"));
    }
    Serial.print(F("GNSS    : "));
    Serial.println(hw_info.gnss    == GNSS_MODULE_SONY    ? F("PASS") : F("FAIL"));

    if (hw_info.model == SOFTRF_MODEL_BRACELET) {
      Serial.print(F("DISPLAY : "));
      Serial.println(hw_info.display == DISPLAY_OLED_0_49 ? F("PASS") : F("N/A"));
      Serial.print(F("IMU     : "));
      Serial.println(STM32_has_IMU                        ? F("PASS") : F("N/A"));
    }

    if (hw_info.model == SOFTRF_MODEL_DONGLE) {
      Serial.println();
      Serial.println(F("External components:"));
      Serial.print(F("DISPLAY : "));
      Serial.println(hw_info.display == DISPLAY_OLED_TTGO ? F("PASS") : F("N/A"));
      Serial.print(F("BMx280  : "));
      Serial.println(hw_info.baro    == BARO_MODULE_BMP280 ? F("PASS") : F("N/A"));
    }

    Serial.println();
    Serial.println(F("Power-on Self Test is complete."));
    Serial.println();
    Serial.flush();
  }
#elif defined(ARDUINO_GENERIC_WLE5CCUX)
  if (hw_info.model == SOFTRF_MODEL_BALKAN) {
    Serial.println();
    Serial.println(F("SoftRF Balkan Edition Power-on Self Test"));
    Serial.println();
    Serial.flush();

    Serial.println(F("Built-in components:"));

    Serial.print(F("RADIO   : "));
    Serial.println(hw_info.rf      == RF_IC_SX1262       ? F("PASS") : F("FAIL"));
    Serial.print(F("CLK SRC : "));
    Serial.println(STM32_has_TCXO                        ? F("TCXO") : F("XTAL"));
    Serial.print(F("BMx280  : "));
    Serial.println(hw_info.baro    == BARO_MODULE_BMP280 ? F("PASS") : F("FAIL"));

    Serial.println();
    Serial.println(F("External components:"));
    Serial.print(F("GNSS    : "));
    Serial.println(hw_info.gnss    != GNSS_MODULE_NONE   ? F("PASS") : F("N/A"));
    Serial.print(F("DISPLAY : "));
    Serial.println(hw_info.display != DISPLAY_NONE       ? F("PASS") : F("N/A"));

    Serial.println();
    Serial.println(F("Power-on Self Test is complete."));
    Serial.println();
    Serial.flush();
  }
#endif /* ARDUINO_NUCLEO_L073RZ || ARDUINO_GENERIC_WLE5CCUX */

  Serial.println(F("Data output device(s):"));

  Serial.print(F("NMEA   - "));
  switch (settings->nmea_out)
  {
    case NMEA_UART       :  Serial.println(F("UART"));          break;
    case NMEA_USB        :  Serial.println(F("USB CDC"));       break;
    case NMEA_OFF        :
    default              :  Serial.println(F("NULL"));          break;
  }

  Serial.print(F("GDL90  - "));
  switch (settings->gdl90)
  {
    case GDL90_UART      :  Serial.println(F("UART"));          break;
    case GDL90_USB       :  Serial.println(F("USB CDC"));       break;
    case GDL90_OFF       :
    default              :  Serial.println(F("NULL"));          break;
  }

  Serial.print(F("D1090  - "));
  switch (settings->d1090)
  {
    case D1090_UART      :  Serial.println(F("UART"));          break;
    case D1090_USB       :  Serial.println(F("USB CDC"));       break;
    case D1090_OFF       :
    default              :  Serial.println(F("NULL"));          break;
  }

  Serial.println();
  Serial.flush();

#if defined(USE_OLED)
  OLED_info1();
#endif /* USE_OLED */
}

static void STM32_fini(int reason)
{
#if defined(ARDUINO_NUCLEO_L073RZ)

  if (hw_info.model == SOFTRF_MODEL_BRACELET) {
#if !defined(EXCLUDE_IMU)
    if (hw_info.imu == IMU_ICM20948) {
      imu.sleep(true);
      // imu.lowPower(true);
    }
#endif /* EXCLUDE_IMU */
  }
#endif /* ARDUINO_NUCLEO_L073RZ */

  Serial_GNSS_In.end();
  Wire.end();

#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
  pinMode(SOC_GPIO_PIN_SDA,  INPUT_ANALOG);
  pinMode(SOC_GPIO_PIN_SCL,  INPUT_ANALOG);

  if (lmic_pins.rst != LMIC_UNUSED_PIN) pinMode(lmic_pins.rst,  INPUT_ANALOG);
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

#if defined(USBD_USE_CDC) && !defined(DISABLE_GENERIC_SERIALUSB)
  SerialOutput.end();
#endif

#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
  /*
   * Work around an issue that
   * WDT (once enabled) is active all the time
   * until hardware restart
   */
  setBackupRegister(SHUTDOWN_REASON_INDEX, reason);
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */

  HAL_NVIC_SystemReset();
}

static void STM32_reset()
{
  HAL_NVIC_SystemReset();
}

static uint32_t STM32_getChipId()
{
#if !defined(SOFTRF_ADDRESS)
  /* Same method as STM32 OGN tracker does */
  uint32_t id = HAL_GetUIDw0() ^ HAL_GetUIDw1() ^ HAL_GetUIDw2();
  return DevID_Mapper(id);
#else
  return (SOFTRF_ADDRESS & 0xFFFFFFFFU );
#endif
}

static uint32_t STM32_getFreeHeap()
{
  char *heapend = (char*)sbrk(0);
  char * stack_ptr = (char*)__get_MSP();
  struct mallinfo mi = mallinfo();

  return ((stack_ptr < minSP) ? stack_ptr : minSP) - heapend + mi.fordblks ;
}

static void STM32_swSer_begin(unsigned long baud)
{
  Serial_GNSS_In.begin(baud);

#if defined(ARDUINO_NUCLEO_L073RZ)
  /* drive GNSS RST pin low */
  pinMode(SOC_GPIO_PIN_GNSS_RST, OUTPUT);
  digitalWrite(SOC_GPIO_PIN_GNSS_RST, LOW);

  /* activate 1.8V<->3.3V level shifters */
  pinMode(SOC_GPIO_PIN_GNSS_LS,  OUTPUT);
  digitalWrite(SOC_GPIO_PIN_GNSS_LS,  HIGH);

  /* keep RST low to ensure proper IC reset */
  delay(200);

  /* release */
  digitalWrite(SOC_GPIO_PIN_GNSS_RST, HIGH);

  /* give Sony GNSS few ms to warm up */
  delay(100);

  /* Leave pin floating */
  pinMode(SOC_GPIO_PIN_GNSS_RST, INPUT);

#endif /* ARDUINO_NUCLEO_L073RZ */
}

static float STM32_Battery_param(uint8_t param)
{
  float rval, voltage;

  switch (param)
  {
  case BATTERY_PARAM_THRESHOLD:
    rval = hw_info.model == SOFTRF_MODEL_DONGLE  ||
           hw_info.model == SOFTRF_MODEL_BRACELET ? BATTERY_THRESHOLD_LIPO   :
                                                    BATTERY_THRESHOLD_NIMHX2;
    break;

  case BATTERY_PARAM_CUTOFF:
    rval = hw_info.model == SOFTRF_MODEL_DONGLE ||
           hw_info.model == SOFTRF_MODEL_BRACELET ? BATTERY_CUTOFF_LIPO   :
                                                    BATTERY_CUTOFF_NIMHX2;
    break;

  case BATTERY_PARAM_CHARGE:
    voltage = Battery_voltage();
    if (voltage < Battery_cutoff())
      return 0;

    if (voltage > 4.2)
      return 100;

    if (voltage < 3.6) {
      voltage -= 3.3;
      return (voltage * 100) / 3;
    }

    voltage -= 3.6;
    rval = 10 + (voltage * 150 );
    break;

  case BATTERY_PARAM_VOLTAGE:
  default:
#ifdef __LL_ADC_CALC_VREFANALOG_VOLTAGE
    int32_t Vref = (__LL_ADC_CALC_VREFANALOG_VOLTAGE(analogRead(AVREF), LL_ADC_RESOLUTION));
#else
    int32_t Vref = (VREFINT * ADC_RANGE / analogRead(AVREF)); // ADC sample to mV
#endif

    int32_t mV = (__LL_ADC_CALC_DATA_TO_VOLTAGE(Vref,
                                                analogRead(SOC_GPIO_PIN_BATTERY),
                                                LL_ADC_RESOLUTION));

    rval = mV * SOC_ADC_VOLTAGE_DIV / 1000.0;
    break;
  }

  return rval;
}

static void STM32_WDT_setup()
{
#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
  // Init the watchdog timer with 5 seconds timeout
  IWatchdog.begin(5000000);
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */
}

static void STM32_WDT_fini()
{
  /* once emabled - there is no way to disable WDT on STM32 */

#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
  if (IWatchdog.isEnabled()) {
    IWatchdog.set(IWDG_TIMEOUT_MAX);
  }
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */
}

static void STM32_Button_setup()
{
  if (SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN   &&
      (hw_info.model == SOFTRF_MODEL_DONGLE   ||
       hw_info.model == SOFTRF_MODEL_BRACELET ||
       hw_info.model == SOFTRF_MODEL_BALKAN)) {
    int button_pin = SOC_GPIO_PIN_BUTTON;

    // BOOT0 button(s) uses external pull DOWN resistor.
    pinMode(button_pin,
            hw_info.model == SOFTRF_MODEL_DONGLE ? INPUT_PULLDOWN :
            hw_info.model == SOFTRF_MODEL_BALKAN ? INPUT_PULLUP : INPUT);

    button_1.init(button_pin, hw_info.model == SOFTRF_MODEL_BALKAN ? HIGH : LOW);

    // Configure the ButtonConfig with the event handler, and enable all higher
    // level events.
    ButtonConfig* PageButtonConfig = button_1.getButtonConfig();
    PageButtonConfig->setEventHandler(handleEvent);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureClick);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureLongPress);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureSuppressAfterClick);
//  PageButtonConfig->setDebounceDelay(15);
    PageButtonConfig->setClickDelay(600);
    PageButtonConfig->setLongPressDelay(2000);
  }
}

static void STM32_Button_fini()
{
  if (SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN   &&
      (hw_info.model == SOFTRF_MODEL_DONGLE   ||
       hw_info.model == SOFTRF_MODEL_BRACELET ||
       hw_info.model == SOFTRF_MODEL_BALKAN)) {
    pinMode(SOC_GPIO_PIN_BUTTON,
            hw_info.model == SOFTRF_MODEL_DONGLE ? INPUT_PULLDOWN :
            hw_info.model == SOFTRF_MODEL_BALKAN ? INPUT_PULLUP : INPUT);
    bool button_is_active = (hw_info.model == SOFTRF_MODEL_BALKAN ? LOW : HIGH);
    while (digitalRead(SOC_GPIO_PIN_BUTTON) == button_is_active);

#if !defined(ARDUINO_WisDuo_RAK3172_Evaluation_Board)
    pinMode(SOC_GPIO_PIN_BUTTON, INPUT_ANALOG);
#endif /* ARDUINO_WisDuo_RAK3172_Evaluation_Board */
  }
}
