==> robot-doc/edfu_softrf_v2/lib/platform/PSoC4.cpp <==
#include <SPI.h>
#include <Wire.h>
#include "../system/SoC.h"
#include "../driver/RF.h"
#include "../driver/EEPROM.h"
#include "../driver/LED.h"
#include "../driver/OLED.h"
#include "../driver/Baro.h"
#include "../driver/Sound.h"
#include "../driver/Battery.h"
#include "../protocol/data/NMEA.h"
#include "../protocol/data/GDL90.h"
#include "../protocol/data/D1090.h"
#include <innerWdt.h>
#include <lorawan_port.h>

static void PSoC4_post_init()
{
  Serial.println();
  Serial.print(F("SoftRF "));
  Serial.print(hw_info.model == SOFTRF_MODEL_MINI ? F("Mini") : F("Octave"));
  Serial.println(F(" Edition Power-on Self Test"));
  Serial.println();
  Serial.flush();

  Serial.println(F("Built-in components:"));

  Serial.print  (F("RADIO   : "));
  Serial.println  (hw_info.rf      == RF_IC_SX1262        ? F("PASS") : F("FAIL"));
  if (hw_info.rf == RF_IC_SX1262) {
    Serial.print(F("CLK SRC : "));
    Serial.println(PSoC4_board == PSOC4_AITHINKER_RA_07H  ? F("XTAL") : F("TCXO"));
  }

#if defined(CubeCell_GPS)
  if (hw_info.model == SOFTRF_MODEL_MINI) {
    if (hw_info.gnss == GNSS_MODULE_AT65) {
      PSoC4_board = PSOC4_HELTEC_CUBECELL_GPS_V1_1;
    }
    Serial.print(F("GNSS    : "));
    Serial.println(hw_info.gnss    != GNSS_MODULE_NONE    ? F("PASS") : F("FAIL"));
    Serial.print(F("DISPLAY : "));
    Serial.println(hw_info.display == DISPLAY_OLED_HELTEC ? F("PASS") : F("FAIL"));
  }
#endif /* CubeCell_GPS */

  Serial.println();
  Serial.println(F("External components:"));

#if !defined(CubeCell_GPS)
  if (hw_info.model != SOFTRF_MODEL_MINI) {
    Serial.print(F("GNSS    : "));
    Serial.println(hw_info.gnss    != GNSS_MODULE_NONE    ? F("PASS") : F("N/A"));
    Serial.print(F("DISPLAY : "));
    Serial.println(hw_info.display == DISPLAY_OLED_TTGO   ? F("PASS") : F("N/A"));
  }
#endif /* NOT CubeCell_GPS */

  Serial.print  (F("BMx280  : "));
  Serial.println  (hw_info.baro    == BARO_MODULE_BMP280  ? F("PASS") : F("N/A"));

  Serial.println();
  Serial.println(F("Power-on Self Test is complete."));
  Serial.println();
  Serial.flush();

#if defined(USE_OLED)
  OLED_info1();
#endif /* USE_OLED */
}

static void PSoC4_fini(int reason)
{
  if (hw_info.model == SOFTRF_MODEL_MINI) {

    digitalWrite(SOC_GPIO_PIN_GNSS_PWR, HIGH);
    pinMode(SOC_GPIO_PIN_GNSS_PWR,  ANALOG);

    /* Current HELTEC 'softSerial' implementation has no .end() method available yet */
#if defined(CubeCell_GPS)
    Serial_GNSS_In.end();
#endif /* CubeCell_GPS */

    delay(2000);

#if defined(USE_OLED)
#if SOC_GPIO_PIN_OLED_RST != SOC_UNUSED_PIN
    digitalWrite(SOC_GPIO_PIN_OLED_RST, LOW);
    delay(200);
    pinMode(SOC_GPIO_PIN_OLED_RST,  ANALOG);
#endif /* SOC_GPIO_PIN_OLED_RST */

#if SOC_GPIO_PIN_OLED_PWR != SOC_UNUSED_PIN
    digitalWrite(SOC_GPIO_PIN_OLED_PWR, HIGH);
    pinMode(SOC_GPIO_PIN_OLED_PWR,  ANALOG);
#endif /* SOC_GPIO_PIN_OLED_PWR */
#endif /* USE_OLED */

    pinMode(SOC_GPIO_PIN_SS,        ANALOG);
    pinMode(SOC_GPIO_PIN_RST,       ANALOG);
    pinMode(SOC_GPIO_PIN_BUSY,      ANALOG);

    pinMode(SOC_GPIO_PIN_BATTERY,   ANALOG);

//    settings->nmea_l = false;
//    settings->nmea_s = false;

    Wire.end();
    Serial.end();

    switch (reason)
    {
#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
    case SOFTRF_SHUTDOWN_BUTTON:
    case SOFTRF_SHUTDOWN_LOWBAT:
      pinMode(SOC_GPIO_PIN_BUTTON,  INPUT);
      attachInterrupt(digitalPinToInterrupt(SOC_GPIO_PIN_BUTTON),
                      PSoC4_User_Key_Wakeup, FALLING);
      break;
#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
    case SOFTRF_SHUTDOWN_NMEA:
      pinMode(SOC_GPIO_PIN_CONS_RX, INPUT);
      attachInterrupt(digitalPinToInterrupt(SOC_GPIO_PIN_CONS_RX),
                      PSoC4_SerialWakeup, FALLING);
      break;
    default:
      break;
    }
  } else {
    pinMode(SOC_GPIO_PIN_ANT_RXTX, ANALOG);

    /* TBD */
  }

  PSoC4_state = PSOC4_LOW_POWER;
//  CyHalt(0);
}

static void PSoC4_reset()
{
  CySoftwareReset();
}

static uint32_t PSoC4_getChipId()
{
#if !defined(SOFTRF_ADDRESS)
  uint32_t id = getID();

  return DevID_Mapper(id);
#else
  return (SOFTRF_ADDRESS & 0xFFFFFFFFU );
#endif
}

static uint32_t PSoC4_getFreeHeap()
{
//  uint8 *heapend = (uint8 *) _sbrk_r(0);
//  return CYDEV_HEAP_SIZE - (heapend - (uint8 *) &_end);

  char top;
  return &top - reinterpret_cast<char*>(_sbrk(0));
}

static void PSoC4_swSer_begin(unsigned long baud)
{
#if defined(CubeCell_GPS)
  Serial_GNSS_In.begin(baud);
#else
  Serial_GNSS_Out.begin(baud);

#if !defined(EXCLUDE_GNSS_MTK) && (STD_OUT_BR == 38400)
  Serial_GNSS_Out.write("$PMTK251,38400*27\r\n");
  GNSS_FLUSH(); delay(250);
#endif /* EXCLUDE_GNSS_MTK */

#if !defined(EXCLUDE_GNSS_UBLOX)
  unsigned int baudrate = STD_OUT_BR;

  setBR[ 8] = (baudrate      ) & 0xFF;
  setBR[ 9] = (baudrate >>  8) & 0xFF;
  setBR[10] = (baudrate >> 16) & 0xFF;

  uint8_t msglen = makeUBXCFG(0x06, 0x00, sizeof(setBR), setBR);
  Serial_GNSS_Out.write(GNSSbuf, msglen);
  GNSS_FLUSH(); delay(250);
#endif /* EXCLUDE_GNSS_UBLOX */

// https://github.com/HelTecAutomation/CubeCell-Arduino/commit/0c7dfbf325602a0ac502b89a4e7e44e9b705e5ac
#if 0
  Serial_GNSS_Out.end();
#endif

  Serial_GNSS_Out.begin(STD_OUT_BR);
#endif /* CubeCell_GPS */
}

static float PSoC4_Battery_param(uint8_t param)
{
  float rval, voltage;

  switch (param)
  {
  case BATTERY_PARAM_THRESHOLD:
    rval = hw_info.model == SOFTRF_MODEL_MINI ? BATTERY_THRESHOLD_LIPO   :
                                                BATTERY_THRESHOLD_NIMHX2;
    break;

  case BATTERY_PARAM_CUTOFF:
    rval = hw_info.model == SOFTRF_MODEL_MINI ? BATTERY_CUTOFF_LIPO   :
                                                BATTERY_CUTOFF_NIMHX2;
    break;

  case BATTERY_PARAM_CHARGE:
    voltage = Battery_voltage();
    if (voltage < Battery_cutoff())
      return 0;

    if (voltage > 4.2)
      return 100;

    if (voltage < 3.6) {
      voltage -= 3.3;
      return (voltage * 100) / 3;
    }

    voltage -= 3.6;
    rval = 10 + (voltage * 150 );
    break;

  case BATTERY_PARAM_VOLTAGE:
  default:

  #if defined(BAT_MON_DISABLE)
    if (PSoC4_bat_mon_disable) {
      rval = 0;
    } else
  #endif
    {
      uint16_t mV = 0;

      if (hw_info.model == SOFTRF_MODEL_MINI &&
          PSoC4_state   == PSOC4_ACTIVE) {
        /* GPIO7 is shared between USER_KEY and VBAT_ADC_CTL functions */
        int user_key_state = digitalRead(SOC_GPIO_PIN_BUTTON);

        /* if the key is not pressed down - activate VBAT_ADC_CTL */
        if (user_key_state == HIGH) {
          pinMode(VBAT_ADC_CTL,OUTPUT);
          digitalWrite(VBAT_ADC_CTL,LOW);
        }

#if !defined(ARDUINO_ARCH_ASR650X)
        /* Heltec CubeCell Arduino Core 1.2.0 or less */
        mV = analogRead(SOC_GPIO_PIN_BATTERY);
#else
        mV = analogReadmV(SOC_GPIO_PIN_BATTERY);
#endif

        /* restore previous state of VBAT_ADC_CTL pin */
        if (user_key_state == HIGH) {
          /*
           * CubeCell-GPS has external 10K VDD pullup resistor
           * connected to GPIO7 (USER_KEY / VBAT_ADC_CTL) pin
           */
          pinMode(VBAT_ADC_CTL, INPUT);
        }
      }

      rval = mV * SOC_ADC_VOLTAGE_DIV / 1000.0;
    }
    break;
  }

  return rval;
}

static void PSoC4_WDT_setup()
{
  /* Enable the WDT.
  * The wdt about every 1.4 seconds generates an interruption,
  * Two unserviced interrupts lead to a system reset(i.e. at the third match).
  * The max feed time shoud be 2.8 seconds.
  * autoFeed = false: do not auto feed wdt.
  * autoFeed = true : it auto feed the wdt in every interrupt.
  */

  /* Enable the WDT, autofeed	*/
  innerWdtEnable(true);
}

static void PSoC4_WDT_fini()
{
  CySysWdtDisable();
}

static void PSoC4_Button_setup()
{
#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
    int button_pin = SOC_GPIO_PIN_BUTTON;

    if (hw_info.model == SOFTRF_MODEL_MINI) {
      // Button(s) uses external pull up resistor.
      pinMode(button_pin, INPUT);
    } else {
      pinMode(button_pin, INPUT_PULLUP);
    }

    button_1.init(button_pin);

    // Configure the ButtonConfig with the event handler, and enable all higher
    // level events.
    ButtonConfig* PageButtonConfig = button_1.getButtonConfig();
    PageButtonConfig->setEventHandler(handleEvent);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureClick);
//    PageButtonConfig->setFeature(ButtonConfig::kFeatureDoubleClick);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureLongPress);
    PageButtonConfig->setFeature(ButtonConfig::kFeatureSuppressAfterClick);
//    PageButtonConfig->setFeature(ButtonConfig::kFeatureSuppressAfterDoubleClick);
//    PageButtonConfig->setFeature(
//                      ButtonConfig::kFeatureSuppressClickBeforeDoubleClick);
//  PageButtonConfig->setDebounceDelay(15);
    PageButtonConfig->setClickDelay(600);
//    PageButtonConfig->setDoubleClickDelay(1500);
    PageButtonConfig->setLongPressDelay(2000);

//  attachInterrupt(digitalPinToInterrupt(button_pin), onPageButtonEvent, CHANGE );
#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
}

static void PSoC4_Button_fini()
{
#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
//  detachInterrupt(digitalPinToInterrupt(SOC_GPIO_PIN_BUTTON));
    while (digitalRead(SOC_GPIO_PIN_BUTTON) == LOW);
    pinMode(SOC_GPIO_PIN_BUTTON, ANALOG);
#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
}
